--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 				justify-content: center;
 				padding: 10px;
 			}
-			/* textarea {
+			textarea {
 				border-radius: 10px;
 				padding: 10px;
 				border: none;
+				box-shadow: 3px 3px 12px -3px #353535;
 				overflow: hidden;
-			} */
+			}
 
 			footer {
 				position: absolute;
