--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 				border-radius: 10px;
 				padding: 10px;
 				border: none;
-				box-shadow: 3px 3px 12px -3px #353535;
 				overflow: hidden;
+				-webkit-box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 0.99);
+				box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 0.99);
 			}
 
 			footer {
