--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				overflow: hidden;
 				-webkit-box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 0.99);
 				box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 0.99);
+				-moz-box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 0.99);
 			}
 
 			footer {
