--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				border: none;
 				overflow: hidden;
 				-webkit-box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 1);
-				box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 1);
+				/* box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 1); */
 			}
 
 			footer {
