--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			textarea {
 				border-radius: 10px;
 				padding: 10px;
-				border: none;
+				border: 1px solid grey;
 				overflow: hidden;
-				-webkit-box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 1);
+				/* -webkit-box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 1); */
 				/* box-shadow: 2px 5px 10px 0px rgba(91, 91, 91, 1); */
 			}
 
